# pixa-server

./: .env.example  .gitignore  Cargo.toml
aggregator/: Cargo.toml
aggregator/src/: lib.rs  ws.rs
core/: app.rs  main.rs  route.rs
core/config/: env.rs
core/handlers/: hooks_handler.rs  mod.rs
core/utils/: mod.rs  route.rs
entity/: Cargo.toml
entity/src/: lib.rs  tg_user.rs
telegram/: Cargo.toml
telegram/src/: lib.rs
telegram/src/commands/: message.rs  mod.rs  start.rs  test.rs
utils/: Cargo.toml
utils/src/: http.rs  lib.rs  math.rs  number.rs  solana.rs
utils/src/config/: env.rs
utils/src/endpoints/: mod.rs
utils/src/endpoints/vybe/: mod.rs  tokens.rs  types.rs  util.rs
