[package]
name = "pixa-server"
version = "0.1.0"
edition = "2021"
path = "core/main.rs"

[[bin]]
name = "pixa-core"
path = "core/main.rs"

[workspace]
members = [
    "telegram",
]

[workspace.dependencies]
serde = "1.0.215"
thiserror = "2.0.4"

[dependencies]
#axum = "0.7.9"
axum = { version = "0.7.9", features = ["tracing", "tokio", "json", "http2"] }
dotenv = "0.15.0"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
telegram = { path = "telegram" }
serde_json = "1.0.133"
