[package]
name = "pixa-server"
version = "0.1.0"
edition = "2021"
path = "core/main.rs"

[[bin]]
name = "pixa-core"
path = "core/main.rs"

[workspace]
members = [ "aggregator", "entity", "telegram" , "migration", "utils" ]

[workspace.dependencies]
anyhow = "1.0.97"
bs58 = "0.5.1"
entity = { path = "entity" }
sea-orm = { version = "1.1.2", features = [  ] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133" 
solana-client = "2.2.2"
solana-sdk = "2.2.2"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }
thiserror = "2.0.4"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utils = { path = "utils" }

[dependencies]
#axum = "0.7.9"
aggregator = { path = "aggregator" }
axum = { version = "0.7.9", features = ["tracing", "tokio", "json", "http2"] }
dotenv = "0.15.0"
entity = { workspace = true }
tokio = { workspace = true }
tower = { version = "0.5.1", features = ["util", "timeout"] }
tower-http = { version = "0.6.2", features = ["timeout", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
telegram = { path = "telegram" }
utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm =  { workspace = true }
sqlx =  { workspace = true }