[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
phf = { version = "0.11", features = ["macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
url = "2.4"
utils = { path = "../utils" }