[package]
name = "entity"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1.1.2", features = [  ] }
serde = { workspace = true }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.36", features = ["sync"] }
utils = { workspace = true }
