[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
bs58 = { workspace = true }
regex = "1.10.2"
reqwest = { version = "0.12.15", features = ["json", "trust-dns", "h2"] }
serde = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }